config-gue/final-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    version: 1.4.5
  annotations:
    description: deskripsinya apa
spec:
  containers:
    - name: container-nginx
      image: ngix
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      # readinessProbe:
      #   httpGet:
      #     path: /
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
      # startupProbe:
      #   httpGet:
      #     path: / 
      #     port: 80
      #   initialDelaySeconds: 0
      #   periodSeconds: 10
      #   timeoutSeconds: 1
      #   successThreshold: 1
      #   failureThreshold: 3
